add: javafx jpackage ubuntu.